--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
             <title> Plotting</title>
-    </head>    
+    </head>
+    
+    <body>
+        <h1>Hello World</h1>
+    </body>
 
 </html>
